# memoriesdb

./: .env  .gitignore  Dockerfile  Makefile  Procfile  README.md  TODO.md  api.py  app.py  chat.py  chat_api.py  config.py  convo.py  db_connect.py  db_utils.py  docker-compose.yml  dostuff.py  dump_session.py  embedding_worker.py  hub.py  init.sql  ipython_kernel_config.py  llm_magic.py  oc.py  ollama_chatbot.py  psapp.py  pubsub.py  pyproject.toml  requirements-test.txt  routes.py  test_bulkload_graph.py  test_chat_api.py  test_graph.py  test_list_api.py  ws.py  wsutil.py
.github/workflows/: deploy-html.yml  static.yml
achat/: pyproject.toml
b4/: Dockerfile  FUTURE.md  chat_api.py  db_connect.py  nginx.conf  test_bulkload_graph.py  test_json_safe.py
b4/achat/: achat.py
b4/docs/: old.GRAPHDB.md
b4/more.old.sql/: 004_sessions.sql
b4/ng/: ARCHITECTURE.md  PROJECT.md  README.md  c.py  embedding_worker.py  h.py  llmchat.py  ollama_tool_calling.py  requirements.txt  simple_chat.py  simple_tool_chat.py  test_llm_math.py  test_logging.py  tool_chat.py  vindexing_worker.py  working_tool_chat.py
b4/nng/: Dockerfile  Makefile  Procfile  README.md  chat.py  chat.yml  chat2.py  chat2.yml  db_ll_utils.py  llm.py  logging_setup.py  person2.txt  person5.txt  pyproject.toml  qq  show_convo.py  util.py
b4/nng/h/: client.py  server.py
b4/old.sql/: 003_enhanced_schema.sql  004_simplified_schema.sql
b4/scripts/: connect_ollama.sh
b4/sql/: 000_setup.sql  001_schema.sql
b4/xsql/: 001_memory_mesh.sql
docs/: LESSONS_LEARNED.md  README.md  chat_graph.md  overview.md
docs/core-concepts/: README.md  data-model.md  pubsub.md  search.md  sessions.md
docs/getting-started/: installation.md  quick-start.md
examples/: chat.py  chat_ollama.py  llm.Procfile  llm.py
html/: index.html  main.js
m4/: .dockerignore  .env  Dockerfile  Makefile  Procfile  chat2.yml  chat6.py  config.py  db_ll_sync.py  db_ll_utils.py  db_sync.py  db_utils.py  dbs6.py  funcs2.py  hub.py  list_convos.py  llam.Modelfile  llm6.py  load_convo.py  memory_chat.py  pyproject.toml  requirements.txt  restart_db.sh  session.py  show_convo.py  simple_chat.py  subagent.py
m4/modelfiles/: Makefile  default.Modelfile  other.Modelfile  test.Modelfile  vision.Modelfile
m4/public/: app.js  app2.js  index.html  style.css
m4/public/ref/: app.js  app2.js  convo.txt  index.html
m4/sql/: 001_memory_mesh.sql
m4/src/m4/: __init__.py
m4/utils/: consolidate_daemon.py
more.old.sql/: 002_schema.sql  003_data.sql  005_advanced_relations.sql
ng/: .env  .windsurfrules  ARCHITECTURE.md  COMPETITIVE_ADVANTAGE.md  Dockerfile  Dockerfile.pgvector  ENTERPRISE_PROPOSAL_TEMPLATE.md  Makefile  PROJECT.md  Procfile  asyncio_chat.py  config.py  core_api.py  db_chat.py  db_utils.py  debug_direct.sh  debug_docker.sh  embedding_worker.py  h.py  hub.py  reliable_tool_chat.py  requirements.txt  superjson.py  test_connection.py  test_core_api.py  test_db_utils.py  test_logging.py  vindexing_worker.py
ng/chat/: chatmodel.py
ng/scripts/: enable_extensions.sh
nng/: Makefile  Procfile  README.md  chat.py  chat.yml  chat2.py  chat6.py  db_ll_sync.py  db_ll_utils.py  db_sync.py  db_utils.py  funcs2.py  list_convos.py  llm.py  llm2.py  llm4.py  llm5.py  llm6.py  load_convo.py  main.py  person4.txt  personality.txt  pyproject.toml  requirements.txt  session.py  util.py
old/: mm.sql
old.sql/: 000_init.sql  002_load-data.sql
ollama/: chat.py  llama3.1-cw128k.Modelfile  llama3.1-cw16k.Modelfile  llama3.1-cw32k.Modelfile  llama3.1-cw4k.Modelfile  llama3.1-cw64k.Modelfile  llama3.1-cw8k.Modelfile
public/: index.html  u.js
scripts/: connect_vastai.sh  loop2on_vastai.sh
sql/: 000_init.sql  000_setup.sql  001_memory_mesh.sql  001_schema.sql  002_data.sql  002_load-data.sql  002_schema.sql  003_sessions.sql
src/: processrunner.c
test_data/: chat_bulkload.jsonl  chat_sessions.json
tests/: run_tests.py  test_memory_graph.py
vapp/: .env  Makefile  index.html  package-lock.json  package.json  vite.config.js
(+30 files in other folders)
